# radscope

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CoordDisplay.tsx  DataLoggerPanel.tsx  MotorControlPanel.tsx  ObjectCatalogue.tsx  SkyMap3D.tsx
src/lib/: astronomyEngine.ts  bleClient.ts  espClient.ts  satelliteTracker.ts  solarTracker.ts  tleService.ts
src/styles/: theme.ts
src/types/: telescope.ts
